--- a/.github/workflows/terrafrom-check.yml
+++ b/.github/workflows/terrafrom-check.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "terraform/**.tf"
   pull_request:
     branches:
       - main
+    paths:
+      - "terraform/**.tf"
 
 jobs:
   terraform:
