--- a/.github/workflows/web-server-check.yml
+++ b/.github/workflows/web-server-check.yml
@@ -1,11 +1,16 @@
 name: Lint and Format Check
 
 on:
+  push:
+    branches:
+      - main
+    # paths:
+    #   - "web-server/**"
   pull_request:
     branches:
       - main
-    paths:
-      - "web-server/**"
+    # paths:
+    #   - "web-server/**"
 
 jobs:
   lint_and_format:
