--- a/.github/workflows/terrafrom-check.yml
+++ b/.github/workflows/terrafrom-check.yml
@@ -6,14 +6,16 @@ on:
       - main
     paths:
       - "terraform/**.tf"
+      - ".github/workflows/terraform-check.yml"
   pull_request:
     branches:
       - main
     paths:
       - "terraform/**.tf"
+      - ".github/workflows/terraform-check.yml"
 
 jobs:
-  terraform:
+  terraform-format:
     name: Check Terraform Format
     runs-on: ubuntu-latest
 
@@ -32,4 +34,22 @@ jobs:
 
       - name: Terraform Validate
         run: terraform -chdir=terraform validate
+
+  tf-plan:
+    name: Run Terraform Plan
+    runs-on: ubuntu-latest
+    needs: terraform-format
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init
+        run: terraform -chdir=terraform init -backend=false
+
+      - name: Terraform Plan
+        run: terraform -chdir=terraform plan -var-file="terraform.tfvars"
 
