test 3 formatter and linter web worker

--- a/.github/workflows/web-worker.check.yml
+++ b/.github/workflows/web-worker.check.yml
@@ -3,14 +3,14 @@ name: Lint and Format Check (Web Worker)
 on:
   push:
     branches: [main]
-    # paths:
-    #   - "web-worker/**"
-    #   - ".github/workflows/web-worker-check.yml"
+    paths:
+      - "web-worker/**"
+      - ".github/workflows/web-worker-check.yml"
   pull_request:
     branches: [main]
-    # paths:
-    #   - "web-worker/**"
-    #   - ".github/workflows/web-worker-check.yml"
+    paths:
+      - "web-worker/**"
+      - ".github/workflows/web-worker-check.yml"
 
 jobs:
   lint_and_format:
