implement poll for video and upload video to put presigned url

--- a/web-worker/Dockerfile
+++ b/web-worker/Dockerfile
@@ -6,9 +6,11 @@ COPY . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-# # Install FFmpeg (since it's not included in the slim image)
+# Optional FFmpeg install
 # RUN apt-get update && \
 #     apt-get install -y ffmpeg && \
 #     rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app/src
 
 CMD ["python", "main.py"]
