change web-server to use typescript

--- a/web-app/nginx.conf
+++ b/web-app/nginx.conf
@@ -9,8 +9,8 @@ server {
     }
     
     # Proxy configuration for API requests
-    location /api {
-        proxy_pass http://${ALB_DNS}/api;
+    location /downscale-videos {
+        proxy_pass http://${ALB_DNS}/downscale-videos;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
