implement video down scaler in work worker

--- a/web-worker/Makefile
+++ b/web-worker/Makefile
@@ -1,8 +1,8 @@
 ## Lint with flake8 (does not modify code)
 lint:
-	black . --check
+	black ./src --check
 
 ## Format with autopep8 (auto-fix issues)
 format:
-	flake8 . --ignore=E501
+	flake8 ./src --ignore=E501
 
