--- a/.github/workflows/web-worker.check.yml
+++ b/.github/workflows/web-worker.check.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Run Black (formatter check)
         run: |
-          black web-worker --check
+          black web-worker/src --check
 
       - name: Run Flake8 (linter)
         run: |
-          flake8 web-worker --ignore=E501
+          flake8 web-worker/src --ignore=E501
